Fix width/height of passenger input btn on firefox

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -392,6 +392,18 @@ ul.timeline > li:before {
   display: block;
 }
 
+input.quantity-field {
+  box-sizing: content-box;
+  -webkit-box-sizing: content-box;
+  width: 40px;
+  height: 25px;
+}
+
+input.button-plus,
+input.button-minus {
+  width: 30px;
+}
+
 /*
     FAQs page
  */
